--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,21 +8,17 @@
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.PrototipoCalculadoraFinanceira"
+        android:theme="@style/Theme.TrabalhoDeAndroidCalculadora"
         tools:targetApi="31">
         <activity
-            android:name=".Valores_Lista_FGTS_Activity"
+            android:name=".Valores_list_fgts_Activity"
             android:exported="false" />
         <activity
-            android:name=".Adapter.Valores_Itens_list_Activity"
+            android:name=".calculadoraFGTS"
             android:exported="false" />
         <activity
-            android:name=".CAlcFGTS_Activity"
-            android:exported="false" />
-        <activity
-            android:name=".Calc_Margem_Activity"
+            android:name=".TelaCalculadoraDeMargem"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
