--- a/settings.gradle
+++ b/settings.gradle
@@ -12,5 +12,5 @@ dependencyResolutionManagement {
         mavenCentral()
     }
 }
-rootProject.name = "Prototipo Calculadora Financeira"
+rootProject.name = "Trabalho de Android Calculadora"
 include ':app'
